--- a/thedavidlaws/gallery.html
+++ b/thedavidlaws/gallery.html
@@ -50,63 +50,63 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <div class="numbertext">1 / 12</div>
-            <img src="images/gallery/leaves-01.JPG" style="width:100%">
+            <img src="images/gallery/leaves-01.JPG" alt="red, yellow, and green leaves on ground" style="width:100%">
             <!-- <div class="text">Caption Text</div> -->
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">2 / 12</div>
-            <img src="images/gallery/tree-01.JPG" style="width:100%">
+            <img src="images/gallery/tree-01.JPG" alt="looking up at yellow-leafed aspens"style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">3 / 12</div>
-            <img src="images/gallery/train-01.JPG" style="width:100%">
+            <img src="images/gallery/train-01.JPG" alt="wood beamed ceiling in Heber City train station" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">4 / 12</div>
-            <img src="images/gallery/leaves-02.JPG" style="width:100%">
+            <img src="images/gallery/leaves-02.JPG" alt="close-up of orange leaves" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">5 / 12</div>
-            <img src="images/gallery/tree-02.JPG" style="width:100%">
+            <img src="images/gallery/tree-02.JPG" alt="yellow tree near a path" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">6 / 12</div>
-            <img src="images/gallery/train-02.JPG" style="width:100%">
+            <img src="images/gallery/train-02.JPG" alt="black and white image of train" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">7 / 12</div>
-            <img src="images/gallery/leaves-03.JPG" style="width:100%">
+            <img src="images/gallery/leaves-03.JPG" alt="yellow leaves on ground" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">8 / 12</div>
-            <img src="images/gallery/tree-03.JPG" style="width:100%">
+            <img src="images/gallery/tree-03.JPG" alt="forest of yellow trees" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">9 / 12</div>
-            <img src="images/gallery/train-03.JPG" style="width:100%">
+            <img src="images/gallery/train-03.JPG" alt="rows of empty seats in a train" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">10 / 12</div>
-            <img src="images/gallery/leaves-04.JPG" style="width:100%">
+            <img src="images/gallery/leaves-04.JPG" alt="close-up of leaves and a tin can" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">11 / 12</div>
-            <img src="images/gallery/tree-04.JPG" style="width:100%">
+            <img src="images/gallery/tree-04.JPG" alt="close-up of cracked wood" style="width:100%">
         </div>
 
         <div class="mySlides fade">
             <div class="numbertext">12 / 12</div>
-            <img src="images/gallery/train-04.JPG" style="width:100%">
+            <img src="images/gallery/train-04.JPG" alt="side view of train" style="width:100%">
         </div>
 
         <!-- Next and previous buttons -->
