--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -67,6 +67,8 @@
 
                 <p>If you'd like to download the psd of my style guide, you can <a class="links" href="newer-grid.psd">click here.</a> At the moment it's quite rough and slightly inaccurate, but before the week is over it will be <em>stunning</em> and <strong>precise</strong>. Are you excited?</p>
 
+                <p>Also, I would like to take a moment to thank my classmates who have helped inspire and teach me throughout the semester. "We may not have it all together, but together we have it all." Love you guys!</p>
+
 
             </section>
 
