--- a/thedavidlaws/index-final.html
+++ b/thedavidlaws/index-final.html
@@ -4,31 +4,36 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="utf-8">
-    <title>Home | David Laws</title>
+    <title>David Laws - Home</title>
 
+<!-- Meta -->
+
+    <meta charset="utf-8">
+    <meta name="author" content="David Laws">
+    <meta name="description" content="David Laws Homepage">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- Stylesheets -->
+<!-- Stylesheets -->
+
     <link href="normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main.css" type="text/css" rel="stylesheet"/>
 
+<!-- Fonts -->
 
-    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
 </head>
 
 <body>
 
-    <!-- Header -->
+<!-- Header -->
+
     <header>
         <a id="logo" href="index-final.html"><img src="images/logo-09-01.png" alt="David Laws logo"/></a>
 
         <nav>
             <ul class="navigation">
-                <li><a href="index-final.html">Home</a></li>
+                <li><a class="active" href="index-final.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -39,16 +44,15 @@
         <div class="slideshow">
             <img src="images/header-smaller.JPG" alt="header collage of leaves and keychains"/>
         </div>
-
     </header>
 
-    <!-- Main -->
-    <main>
+<!-- Main -->
 
+    <main>
         <h1>Welcome!</h1>
         <p>My name is <a class="links" href="https://www.linkedin.com/in/thedavidlaws/" target="_blank">David Laws</a>, and this is a compilation of my interests, school projects, and the beauty I find in life. I hope as you explore <a class="links" href="gallery.html">my photography</a> and listen to <a class="links" href="gallery.html">my stories</a> you will find curiosity and gratitude in your heart. The beauty we find in simplicity will outweigh any riches in this life.<br><br>
 
-            Perhaps <a class="links" href="https://www.britannica.com/biography/John-Muir" target="_blank">John Muir</a> expressed it best when he wrote, "Everybody needs beauty as well as bread, places to play in and pray in,
+        Perhaps <a class="links" href="https://www.britannica.com/biography/John-Muir" target="_blank">John Muir</a> expressed it best when he wrote, "Everybody needs beauty as well as bread, places to play in and pray in,
         where nature may heal and give strength to body and soul."</p><br>
 
 
@@ -74,15 +78,21 @@
         </div>
 
         <a id="seeMo" href="gallery.html">See More</a>
-
     </main>
 
-    <!-- Footer -->
+<!-- Footer -->
+
     <footer>
+        <section class="footer-bar">
 
-
-        <section class="footer-bar">&copy;2018 | All Rights Reserved | David Laws <span id="currentdate"></span>
+            <ul class="navTwo">
+                <li><a href="about.html">About</a></li>
+                <li><a href="styleguide.html">Style Guide</a></li>
+                <li><a href="http://thedavidlaws.com/comm310-website/practice/index.html">Practice</a></li>
+            </ul>
         </section>
+
+        <p>Copyright &copy; 2018 | David Laws | All Rights Reserved</p>
 
     </footer>
 
