--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -2,17 +2,22 @@
 <html lang="en-us">
 
 <head>
+    <title>David Laws - Projects</title>
+
+<!-- Meta -->
 
     <meta charset="utf-8">
-    <title>Contact | David Laws</title>
-
+    <meta name="author" content="David Laws">
+    <meta name="description" content="David Laws Projects Page">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    <!-- Stylesheets -->
+<!-- Stylesheets -->
+
     <link href="normalize.css" type="text/css" rel="stylesheet"/>
     <link href="styles/main.css" type="text/css" rel="stylesheet"/>
 
-    <!-- Fonts -->
+<!-- Fonts -->
+
     <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -29,19 +34,19 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a class="active" href="projects.html">Projects</a></li>
             </ul>
         </nav>
 
         <div class="slideshow">
             <img src="images/header-smaller.JPG" alt="header collage of leaves and keychains"/>
         </div>
-
     </header>
 
     <main>
         <br>
-        <h2></h2>
+        <h1>Projects</h1>
+        <p>Click on the images below to view what I've been creating during school. If you've got a suggestion let me know!</p>
         <br>
 
         <div class="gridPro">
@@ -63,27 +68,33 @@
 
 
             <section class="downloads">
-                <h1>Hello There!</h1>
+                <h1>Free Downloads</h1>
 
                 <p>If you'd like to download the psd of my style guide, you can <a class="links" href="newer-grid.psd">click here.</a> At the moment it's quite rough and slightly inaccurate, but before the week is over it will be <em>stunning</em> and <strong>precise</strong>. Are you excited?</p>
 
                 <p>Also, I would like to take a moment to thank my classmates who have helped inspire and teach me throughout the semester. "We may not have it all together, but together we have it all." Love you guys!</p>
-
-
             </section>
-
         </div>
-
 
     </main>
 
-    <!-- Footer -->
-    <footer>
+<!-- Footer -->
 
-        <section class="footer-bar">&copy;2018 | All Rights Reserved | David Laws <span id="currentdate"></span>
+    <footer>
+        <section class="footer-bar">
+
+            <ul class="navTwo">
+                <li><a href="about.html">About</a></li>
+                <li><a href="styleguide.html">Style Guide</a></li>
+                <li><a href="http://thedavidlaws.com/comm310-website/practice/index.html">Practice</a></li>
+            </ul>
         </section>
 
+        <p>Copyright &copy; 2018 | David Laws | All Rights Reserved</p>
+
     </footer>
+
     <script src="scripts/slideshow.js" type="text/javascript"></script>
-    </body>
+
+</body>
 </html>
