--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -1,9 +1,17 @@
-
 <!DOCTYPE html>
 <html>
     <head>
-        <title>David Laws Style Guide</title>
+        <title>David Laws - Style Guide</title>
+
+<!-- Meta -->
+
         <meta charset="UTF-8"/>
+        <meta name="author" content="David Laws">
+        <meta name="description" content="David Laws Projects Page">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+
+<!-- Styles and Fonts -->
+
         <link href="styles/styleguide.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Quando" rel="stylesheet">
@@ -95,7 +103,7 @@
             1234567890!@#$%^&amp;*()_+</p>
             <p>Lorem ipsum nonsed eicillabore essum fugit lantisit, si nis eictia num fugiam et quatquis resto eossitem quunt quae sit dolupis maio omnimo il id maio bea ipid que conseque volorem. Et facidebit vel ma doluptasitis num, ullandebit hicto beaquos tiumquis postrum cori odit eosam quiatur? Volo quid minvel earuptatem quiatur?</p>
             <p>Mod qui quunturiam idenderro ma et ex ex ex exerum faci repel molut evelign amenduciis moloreperum qui nullupt ustrumet, sequi a pre non net is dia comnimusant isque voleseque eatur simpori beruptae quam fugit eostios quasi nulpa quatur molorero quam eventio ma venis quideri atiaturione volupiscia sime denestis et hil magnatem aliquundella cusanihit fuga. Pienia dolo tem voluptassi volor as voluptae nulla sed maximincium sapelen tiatqui busapernatus aspis as aborioreic tet recta volessu ndelit hil is explame niminve ratur?
-Mus andebis si adipsamus ad moluptiae cum este verupid es sequam veri tem sequi re volum doluptatque veriorepudis et, tetum as porem et que sim natiis doluptatures et, sam rehent alicipis suntio conestio ipsandam que prem idi quiasped mod maximod iatium ex et quassimin nonempo reperisci te nonsedit ut auta volorisque paribus.</p>
+            Mus andebis si adipsamus ad moluptiae cum este verupid es sequam veri tem sequi re volum doluptatque veriorepudis et, tetum as porem et que sim natiis doluptatures et, sam rehent alicipis suntio conestio ipsandam que prem idi quiasped mod maximod iatium ex et quassimin nonempo reperisci te nonsedit ut auta volorisque paribus.</p>
         </section>
 
 <!-- Navigation Section -->
