--- a/thedavidlaws/gallery.html
+++ b/thedavidlaws/gallery.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="utf-8">
-        <title>Contact | David Laws</title>
+<head>
+    <title>David Laws - Gallery</title>
 
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+<!-- Meta -->
 
-        <!-- Stylesheets -->
-        <link href="normalize.css" type="text/css" rel="stylesheet"/>
-        <link href="styles/main.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <meta name="author" content="David Laws">
+    <meta name="description" content="David Laws Gallery Page">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<!-- Stylesheets -->
 
-        <!-- scripts are below -->
+    <link href="normalize.css" type="text/css" rel="stylesheet"/>
+    <link href="styles/main.css" type="text/css" rel="stylesheet"/>
 
-    </head>
+<!-- Fonts -->
+
+    <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+<!-- scripts are below -->
+
+</head>
 
 <body>
 
@@ -29,7 +35,7 @@
                 <li><a href="index-final.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a class="active" href="gallery.html">Gallery</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
@@ -37,21 +43,20 @@
         <div class="slideshow">
             <img src="images/header-smaller.JPG" alt="header collage of leaves and keychains"/>
         </div>
-
     </header>
 
 <main>
 
     <br><br>
 
-    <!-- Slideshow container -->
+<!-- Slideshow container -->
     <div class="slideshow-container">
 
-        <!-- Full-width images with number and caption text -->
+<!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <div class="numbertext">1 / 12</div>
             <img src="images/gallery/leaves-01.JPG" alt="red, yellow, and green leaves on ground" style="width:100%">
-            <!-- <div class="text">Caption Text</div> -->
+<!-- This is how you add a caption text: <div class="text">Caption Text</div> -->
         </div>
 
         <div class="mySlides fade">
@@ -133,7 +138,6 @@
 
 <br>
 
-
     <section class="winter">
         <h1>Why Do We Fall?</h1>
 
@@ -151,22 +155,29 @@
         </audio>
     </section>
 
-
-
 </main>
 
-    <!-- Footer -->
-    <footer>
+<!-- Footer -->
 
-        <section class="footer-bar">&copy;2018 | All Rights Reserved | David Laws <span id="currentdate"></span>
+    <footer>
+        <section class="footer-bar">
+
+            <ul class="navTwo">
+                <li><a href="about.html">About</a></li>
+                <li><a href="styleguide.html">Style Guide</a></li>
+                <li><a href="http://thedavidlaws.com/comm310-website/practice/index.html">Practice</a></li>
+            </ul>
         </section>
 
+        <p>Copyright &copy; 2018 | David Laws | All Rights Reserved</p>
+
     </footer>
+
+<!-- scripts -->
+
     <script src="scripts/slideshow.js" type="text/javascript"></script>
-    <!-- scripts -->
-    <script>
-        var audio = document.getElementById("myaudio");
-        audio.volume = 0.5;
-    </script>
+    <script> var audio = document.getElementById("myaudio"); audio.volume = 0.5;</script>
+
 </body>
+
 </html>
