--- a/thedavidlaws/contact.html
+++ b/thedavidlaws/contact.html
@@ -32,7 +32,7 @@
             <ul class="navigation">
                 <li><a href="index-final.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a class="active" href="contact.html">Contact</a></li>
+                <li><a class="activeLink" href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
