--- a/thedavidlaws/gallery.html
+++ b/thedavidlaws/gallery.html
@@ -35,7 +35,7 @@
                 <li><a href="index-final.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a class="active" href="gallery.html">Gallery</a></li>
+                <li><a class="activeLink" href="gallery.html">Gallery</a></li>
                 <li><a href="projects.html">Projects</a></li>
             </ul>
         </nav>
