--- a/thedavidlaws/about.html
+++ b/thedavidlaws/about.html
@@ -34,7 +34,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="index-final.html">Home</a></li>
-                <li><a class="active" href="about.html">About</a></li>
+                <li><a class="activeLink" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="projects.html">Projects</a></li>
