--- a/thedavidlaws/index-final.html
+++ b/thedavidlaws/index-final.html
@@ -33,7 +33,7 @@
 
         <nav>
             <ul class="navigation">
-                <li><a class="active" href="index-final.html">Home</a></li>
+                <li><a class="activeLink" href="index-final.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
