--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -34,7 +34,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a class="active" href="projects.html">Projects</a></li>
+                <li><a class="activeLink" href="projects.html">Projects</a></li>
             </ul>
         </nav>
 
