--- a/thedavidlaws/about.html
+++ b/thedavidlaws/about.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -55,7 +53,7 @@
                  <p><b>What’s up!</b> My name is <a class="links" href="https://www.linkedin.com/in/thedavidlaws/" target="_blank">David Laws</a>, and I am a seeker of truth, love, and every other good thing. Being the proud son of an Air Force veteran, I'm well-aquainted with travel. While it wasn't always the ideal lifestyle, it blessed me with an awareness of simple beauty. Whether you're in a big city, or a small town, there's always something beautiful to see.<br><br>
 
                  My beliefs are simple; love Jesus, build unity, and wash your hands. Often. I am, always have been, and always will be a <a class="links" href="https://www.youtube.com/watch?v=rU6NIu-V5Pc" target="_blank">Mormon</a>. I have so many reasons to believe there is a God, and if a God, an honored Son who really was able to atone for our sins. I resonate with being an <a class="links" href="https://www.16personalities.com/enfj-personality" target="_blank">ENFJ,</a> and <a class="links" href="http://9types.com/descr/?type=6" target="_blank">my enneagram</a> falls somewhere between four and six.<br><br>
-                 If you want to know more, explore my pages or ask me a question. Either way, have a blessed day! :)</p>
+                 Have a question? <a class="links" href="contact.html">Send me a message!</a></p>
         </section>
 
     <br><br><br><br><br>
