--- a/thedavidlaws/index-final.html
+++ b/thedavidlaws/index-final.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -61,18 +59,18 @@
         <div class="grid-img">
 
             <figure>
-                <img src="images/leaves-water.JPG" alt="tree with red leaves near water">
-                <figcaption>Looking over crooked creek.</figcaption>
+                <a href="https://www.facebook.com/thedavidlaws" target="_blank"><img src="images/facebook.JPG" alt="rounded screenshot of David's facebook profile"></a>
+                <a class="figlink" href="https://www.facebook.com/thedavidlaws" target="_blank"><figcaption>Facebook</figcaption></a>
             </figure>
 
             <figure>
-                <img src="images/gold-flowers.JPG" alt="close up of yellow flowers">
-                <figcaption>The flowers shine brightest in the rain.</figcaption>
+                <a href="projects.html"><img src="images/projects-logo.JPG" alt="green circle labeled as the projects"></a>
+                <a class="figlink" href="projects.html"><figcaption>Projects</figcaption></a>
             </figure>
 
             <figure>
-                <img src="images/autumn-mountain.JPG" alt="orange-leaf trees on a mountain">
-                <figcaption>Misty mountains are my favorite.</figcaption>
+                <a href="https://thedavidlaws.wordpress.com/" target="_blank"><img src="images/laws-blog.JPG" alt="rounded screenshot of blog"></a>
+                <a class="figlink" href="https://thedavidlaws.wordpress.com/" target="_blank"><figcaption>My Blog</figcaption></a>
             </figure>
 
         </div>
