--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <title>David Laws - Projects</title>
 
@@ -49,28 +48,28 @@
         <p>Click on the images below to view what I've been creating during school. If you've got a suggestion let me know!</p>
         <br>
 
-        <div class="gridPro">
+        <div class="grid-img">
 
             <figure>
-                <a href="styleguide.html"><img src="images/styleguide-logo.png" alt="psd file logo"></a>
-                <figcaption>Style Guide</figcaption>
+                <a href="styleguide.html"><img src="images/style-guide-logo.JPG" alt="blue circle labeled as style guide"></a>
+                <a class="figlink" href="styleguide.html"><figcaption>Style Guide</figcaption></a>
             </figure>
 
             <figure>
-                <a href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><img src="images/practice-logo.png" alt="two stacked books icon"></a>
-                <figcaption>Practice Folder</figcaption>
+                <a href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><img src="images/comm-practice.JPG" alt="two stacked books icon"></a>
+                <a class="figlink" href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><figcaption>Practice Folder</figcaption></a>
             </figure>
 
             <figure>
-                <a href="https://www.behance.net/dp2313ea0f" target="_blank"><img src="images/behance-logo.png" alt="behance logo"></a>
-                <figcaption>Behance</figcaption>
+                <a href="https://www.behance.net/dp2313ea0f" target="_blank"><img src="images/behance.JPG" alt="behance logo"></a>
+                <a class="figlink" href="https://www.behance.net/dp2313ea0f" target="_blank"><figcaption>Behance</figcaption></a>
             </figure>
 
 
             <section class="downloads">
                 <h1>Free Downloads</h1>
 
-                <p>If you'd like to download the psd of my style guide, you can <a class="links" href="newer-grid.psd">click here.</a> At the moment it's quite rough and slightly inaccurate, but before the week is over it will be <em>stunning</em> and <strong>precise</strong>. Are you excited?</p>
+                <p>If you'd like to download the psd of my style guide, you can <a class="links" href="newer-grid.psd">click here.</a> At the moment it's quite rough and slightly inaccurate, but it was the best I could do with my limited time. I've tried to update the style guide and all other aspects, so I hope that compensates well.</p>
 
                 <p>Also, I would like to take a moment to thank my classmates who have helped inspire and teach me throughout the semester. "We may not have it all together, but together we have it all." Love you guys!</p>
             </section>
