--- a/thedavidlaws/index-final.html
+++ b/thedavidlaws/index-final.html
@@ -60,17 +60,17 @@
 
             <figure>
                 <a href="https://www.facebook.com/thedavidlaws" target="_blank"><img src="images/facebook.JPG" alt="rounded screenshot of David's facebook profile"></a>
-                <a class="figlink" href="https://www.facebook.com/thedavidlaws" target="_blank"><figcaption>Facebook</figcaption></a>
+                <figcaption><a class="figlink" href="https://www.facebook.com/thedavidlaws" target="_blank">Facebook</a></figcaption>
             </figure>
 
             <figure>
                 <a href="projects.html"><img src="images/projects-logo.JPG" alt="green circle labeled as the projects"></a>
-                <a class="figlink" href="projects.html"><figcaption>Projects</figcaption></a>
+                <figcaption><a class="figlink" href="projects.html">Projects</a></figcaption>
             </figure>
 
             <figure>
                 <a href="https://thedavidlaws.wordpress.com/" target="_blank"><img src="images/laws-blog.JPG" alt="rounded screenshot of blog"></a>
-                <a class="figlink" href="https://thedavidlaws.wordpress.com/" target="_blank"><figcaption>My Blog</figcaption></a>
+                <figcaption><a class="figlink" href="https://thedavidlaws.wordpress.com/" target="_blank">My Blog</a></figcaption>
             </figure>
 
         </div>
