--- a/thedavidlaws/projects.html
+++ b/thedavidlaws/projects.html
@@ -52,17 +52,17 @@
 
             <figure>
                 <a href="styleguide.html"><img src="images/style-guide-logo.JPG" alt="blue circle labeled as style guide"></a>
-                <a class="figlink" href="styleguide.html"><figcaption>Style Guide</figcaption></a>
+                <figcaption><a class="figlink" href="styleguide.html">Style Guide</a></figcaption>
             </figure>
 
             <figure>
                 <a href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><img src="images/comm-practice.JPG" alt="two stacked books icon"></a>
-                <a class="figlink" href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank"><figcaption>Practice Folder</figcaption></a>
+                <figcaption><a class="figlink" href="http://thedavidlaws.com/comm310-website/practice/index.html" target="_blank">Practice Folder</a></figcaption>
             </figure>
 
             <figure>
                 <a href="https://www.behance.net/dp2313ea0f" target="_blank"><img src="images/behance.JPG" alt="behance logo"></a>
-                <a class="figlink" href="https://www.behance.net/dp2313ea0f" target="_blank"><figcaption>Behance</figcaption></a>
+                <figcaption><a class="figlink" href="https://www.behance.net/dp2313ea0f" target="_blank">Behance</a></figcaption>
             </figure>
 
 
