--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -14,7 +14,7 @@
 
         <link href="styles/styleguide.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Quando" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat|Quando" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     </head>
     <body>
 
@@ -134,6 +134,7 @@
                 <p>Copyright &copy; 2018 | David Laws | All Rights Reserved</p>
 
             </footer>
+        </section>
 
 <!-- HTML Elements Section -->
 
@@ -168,12 +169,12 @@
             <p>Lia sitio blabore ruptatium, to dolorum erum siniscia cor serum sinum solupti aecepe dolupta quiaturion exerum quasi ut et eatemolorem fugit, adistis ab in et dolectem venda custisint occabor esequas core mod est, anditium everes as idundae rferferferi qui re dit eaquo veliquia qui totatiam denis iniscii squatur?</p>
             <p>Ant aliquias alis es ma proribus. Solest, officiendic tem eatibeatium re voluptas es diae eate a eostrume nis il erum facit et ex est, ipsae cum simodi tet quos ma volupta aut latur, et quamus nobis netur seritius excero voloratuscia essequaspis sequo cus, everum nissit et fugiaeperor acepedit quatiam et eum volo dicaeribus dest lab illiqua temporrum, que quam que perovidus, voluptatur, officto doluptata nempore icipsapid eatas es eum quiaspis earum que offic tem fugita voluptatinis quis as audigen derferf erition sectasitia solupta nam net quatur andis del ium re enihit aut apelist et es milit quaes ulles expliquunt volorum eictium quia iur, nis dit asped estiatem. </p>
 
-            <h3 class="styleguide">Figure & Figcaption</h3>
+            <h3 class="styleguide">Figure and Figcaption</h3>
             <div class="grid-img">
 
                 <figure>
                     <a href="https://www.facebook.com/thedavidlaws" target="_blank"><img src="images/facebook.JPG" alt="rounded screenshot of David's facebook profile"></a>
-                    <a class="figlink" href="https://www.facebook.com/thedavidlaws" target="_blank"><figcaption>Facebook</figcaption></a>
+                    <figcaption><a class="figlink" href="https://www.facebook.com/thedavidlaws" target="_blank">Facebook</a></figcaption>
                 </figure>
             </div>
         </section>
@@ -190,9 +191,7 @@
             </ul>
             <h3 class="styleguide">Links to images, textures, or other borrowed assets</h3>
             <ul class="styleguide">
-                <p>None.</p>
             </ul>
         </section>
-
     </body>
 </html>
