--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -42,8 +42,9 @@
         <section>
             <h2 class="styleguide">Layout</h2>
             <h3 class="styleguide">Sitemap</h3>
-            <img src="images/guide/sitemap.jpg" alt="Sitemap image"/>
+            <img class="shrink" src="images/guide/laws-map.jpg" alt="Sitemap image"/>
             <h3 class="styleguide">Wireframes</h3>
+            <img class="shrink" src="images/guide/wireframe.jpg" alt="wireframe 3 image"/>
             <img src="images/guide/laws-grid-01.jpg" alt="Wireframe 1 image"/>
             <img src="images/guide/laws-grid-02.jpg" alt="Wireframe 2 image"/>
             <h3 class="styleguide">Photoshop Design</h3>
