--- a/thedavidlaws/styleguide.html
+++ b/thedavidlaws/styleguide.html
@@ -192,6 +192,8 @@
             </ul>
             <h3 class="styleguide">Links to images, textures, or other borrowed assets</h3>
             <ul class="styleguide">
+                <li>Adam Young, http://adamyoungofficial.tumblr.com/post/28349962697/why-must-we-fall</li>
+                <li>Ted Strasser, WJR Public Radio, found in public domain several years ago.</li>
             </ul>
         </section>
     </body>
